--- a/Sanzh/book.html
+++ b/Sanzh/book.html
@@ -3,62 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
-    <style>
-        .navbar {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            background-color: #d8b8b8;
-        }
-        .navbar img {
-            margin-right: 20px;
-        }
-        .navbar ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        .navbar li {
-            margin-right: 15px;
-        }
-        .navbar a {
-            text-decoration: none;
-            color: #000;
-        }
-        .navbar div {
-            margin-left: auto;
-        }
-    </style>
+    <link rel = "stylesheet" href = "src/style.css">
+    <title>Index</title>
 </head>
 <body>
-    <nav class="navbar">
-        <img src="./src/public/брекоткин.jpg" width="100" height="100" alt="logo"> 
+    <nav class = "navbar">
+        <img src = "./src/public/брекоткин.jpg" width = 100 height = 100 alt = "logo"> 
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="video.html">Video</a></li>
-            <li><a href="audio.html">Audio</a></li>
-            <li><a href="book.html">Book</a></li>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "video.html">Video</a></li>
+            <li><a href = "audio.html">Audio</a></li>
+            <li><a href = "book.html">Book</a></li>
         </ul>
-        <div><a href="https://ku.edu.kz">Entry</a></div>
-    </nav>    
+        <div><a href = "https://ku.edu.kz">Entry</a></div>
+    </nav>
     <main>
+        <div>
+            <p>Name: Agent.</p>
+            <p>Surname: Qotaq.</p>
+            <p>Age: 22 yeras old.</p>
+            <p>Place of birth: Beskol.</p>
+            <p>Profession: Terrorist</p>
+        </div>
+        <img src = "C:\Users\user\Desktop\Семенюк1\Семенюк\Sanzh\src\public\z1.jpg" width = 200 height = 200 alt = "Photo">
+        <div>
+            <p>Interests: Kill, playing CS2.</p>
+            <p>Hobbies: Play with AK-47.</p>
+            <p>Life views: Liberal.</p>
+            <p>Credo: Bingo Bango Bongo Bish Bash Bosh.</p>
+        </div>
         <section>
-            <img src="./src/public/я.jpg" width="600" height="400" alt="Book Cover 1"> 
-            <a href="./src/public/Graphs.pdf">Download book</a>
-            <p>Just a book about our studying</p>
+            <h2>Essay</h2>
+            <p>Ilnurka,Deniska,Dias was a frieds, but Dias was a квадробер and now they are not friends.</p>
         </section>
-        <section>
-            <img src="./src/public/я1.jpg" width="600" height="480" alt="Book Cover 2"> 
-            <a href="./src/public/Graphs.pdf">Download book</a>
-            <p>Just a book about our studying</p>
-        </section>
-        <section>
-            <img src="./src/public/я3.jpg" width="600" height="400" alt="Book Cover 3"> 
-            <a href="./src/public/Graphs.pdf">Download book</a>
-            <p>Just a book about our studying</p>
-        </section>
-    </main>  
+    </main>
+    <footer>
+        <a href = "https://www.youtube.com/watch?v=Rgqokr8xB2A"><img src = "C:\Users\user\Desktop\Семенюк1\Семенюк\Sanzh\src\public\z2.jpg" width = 200 height = 200></a>
+        <a href = "https://www.youtube.com/watch?v=scmElhAhMAs"><img src = "C:\Users\user\Desktop\Семенюк1\Семенюк\Sanzh\src\public\z3.jpg" width = 200 height = 200></a>
+        <a href = "https://www.youtube.com/watch?v=rhq2porAyYQ"><img src = "./src/public/я2.jpg" width = 200 height = 200></a>
+    </footer>
 </body>
 </html>
